garde_derive_tests/tests/compile-fail/no_validation.rs
#[derive(garde::Validate)]
struct Test<'a> {
    field: &'a str,
}

fn main() {}
